syntax = "proto3";

package keyauth.user;
option go_package = "github.com/infraboard/keyauth/pkg/user";

import "pkg/user/pb/request.proto";
import "pkg/user/pb/user.proto";
import "github.com/infraboard/mcube/pb/http/entry.proto";

// Service 用户服务
service UserService {
	// 查询用户
	rpc QueryAccount(QueryAccountRequest) returns(Set) {
		option (mcube.http.rest_api) = {
			path: "/users"
			method: "GET"
			resource: "user"
			auth_enable: true
			labels: [{
				key: "allow"
				value: "org_admin"
			}]
		};
	};
	// 获取账号Profile
	rpc DescribeAccount(DescribeAccountRequest) returns(User) {
		option (mcube.http.rest_api) = {
			path: "/users/:account"
			method: "GET"
			resource: "user"
			auth_enable: true
			labels: [{
				key: "allow"
				value: "org_admin"
			}]
		};
	};
	// 创建用户
	rpc CreateAccount(CreateAccountRequest) returns(User) {
		option (mcube.http.rest_api) = {
			path: "/users"
			method: "POST"
			resource: "user"
			auth_enable: true
			labels: [{
				key: "allow"
				value: "org_admin"
			}]
		};
	};
	// 警用账号
	rpc BlockAccount(BlockAccountRequest) returns(User) {
		option (mcube.http.rest_api) = {
			path: "/users/:account/block"
			method: "POST"
			resource: "user"
			auth_enable: true
			labels: [{
				key: "allow"
				value: "org_admin"
			}]
		};
	};
	// DeleteAccount 删除用户
	rpc DeleteAccount(DeleteAccountRequest) returns(User) {
		option (mcube.http.rest_api) = {
			path: "/users/:account"
			method: "DELETE"
			resource: "user"
			auth_enable: true
			labels: [{
				key: "allow"
				value: "org_admin"
			}]
		};
	};
	// 更新用户
    rpc UpdateAccountProfile(UpdateAccountRequest) returns(User) {
		option (mcube.http.rest_api) = {
			path: "/users/:account"
			method: "PUT"
			resource: "user"
			auth_enable: true
			labels: [{
				key: "allow"
				value: "org_admin"
			}]
		};
	};
    // 修改用户密码
	rpc UpdateAccountPassword(UpdatePasswordRequest) returns(Password) {
		option (mcube.http.rest_api) = {
			path: "/users/:account/password"
			method: "PUT"
			resource: "password"
			auth_enable: true
			labels: [{
				key: "allow"
				value: "org_admin"
			}]
		};
	};
	// GeneratePassword 生成符合检测强度的随机密码
	rpc GeneratePassword(GeneratePasswordRequest) returns(GeneratePasswordResponse) {
		option (mcube.http.rest_api) = {
			path: "/passwords"
			method: "POST"
			resource: "password"
			auth_enable: true
			labels: [{
				key: "allow"
				value: "*"
			}]
		};
	};
}